# antenna-tracker

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  sat.tle
src/: config.h  main.cpp
src/controller/: antenna_controller.cpp  antenna_controller.h
src/protocol/: drive.h  vkaprotocol.cpp  vkaprotocol.h
src/tracking/: tle_tracker.cpp  tle_tracker.h  trajectory_planner.cpp  trajectory_planner.h
tests/: test_protocol.cpp  test_trajectory.cpp
tools/: mock_controller.py
